panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__struct__abi__test_member_access_on_returned_struct.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/struct/abi/test_member_access_on_returned_struct.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/abi/test_member_access_on_returned_struct.c"
   (struct Struct~0
      (member value @0 `int`))
   (function-definition external stack-size=24
      (make_struct~1 `fn() -> struct Struct~0 complete` (static make_struct))
      (compound-statement
         (definition (value~3 `struct Struct~0 complete` @0)
            (braced
               (subobject +0 (42 `int` @0))))
         (return (value~3 `struct Struct~0 complete` @0))))
   (function-definition external stack-size=24
      (main~4 `fn() -> int` (static main))
      (compound-statement
         (return
            (member `int` @0 value +0
               (call `struct Struct~0 complete` @0
                  (addressof `ptr<fn() -> struct Struct~0 complete>` @8
                     (make_struct~1 `fn() -> struct Struct~0 complete` (static make_struct)))))))))

----- stderr -----
