panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__struct__abi__test_multiple_structs_passed_as_int_pair.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/struct/abi/test_multiple_structs_passed_as_int_pair.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/abi/test_multiple_structs_passed_as_int_pair.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (struct Struct~1
      (member string @0 `array<char; 11>`))
   (function-definition external stack-size=72
      (print_struct~2 `fn(x: char, value: struct Struct~1 complete, y: char, other: struct Struct~1 complete, z: char) -> void` (static print_struct))
      (params
         (x~4 `char` @0)
         (value~5 `struct Struct~1 complete` @1)
         (y~6 `char` @12)
         (other~7 `struct Struct~1 complete` @13)
         (z~8 `char` @24))
      (compound-statement
         (expression
            (call `int` @28
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @32
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @40
                  (noop-type-conversion `ptr<char>` @40
                     (addressof `ptr<array<char; 4>>` @40
                        (string `array<char; 4>` @void "%s\n\0"))))
               (noop-type-conversion `ptr<char>` @48
                  (addressof `ptr<array<char; 11>>` @48
                     (member `array<char; 11>` @1 string +0
                        (value~5 `struct Struct~1 complete` @1))))))
         (expression
            (call `int` @28
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @32
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @40
                  (noop-type-conversion `ptr<char>` @40
                     (addressof `ptr<array<char; 4>>` @40
                        (string `array<char; 4>` @void "%s\n\0"))))
               (noop-type-conversion `ptr<char>` @48
                  (addressof `ptr<array<char; 11>>` @48
                     (member `array<char; 11>` @13 string +0
                        (other~7 `struct Struct~1 complete` @13))))))
         (expression
            (call `int` @28
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @32
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @40
                  (noop-type-conversion `ptr<char>` @40
                     (addressof `ptr<array<char; 10>>` @40
                        (string `array<char; 10>` @void "%d %d %d\n\0"))))
               (sign-extend `int` @48 (x~4 `char` @0))
               (sign-extend `int` @52 (y~6 `char` @12))
               (sign-extend `int` @56 (z~8 `char` @24))))))
   (function-definition external stack-size=72
      (main~9 `fn() -> int` (static main))
      (compound-statement
         (struct Struct~1
            (member string @0 `array<char; 11>`))
         (definition (value~11 `struct Struct~1 complete` @0)
            (braced
               (subobject +0 (string `array<char; 11>` @void "0123456789\0"))))
         (struct Struct~1
            (member string @0 `array<char; 11>`))
         (definition (v2~12 `struct Struct~1 complete` @11)
            (braced
               (subobject +0 (string `array<char; 11>` @void "abcdefghjk\0"))))
         (expression
            (call `void` @void
               (addressof `ptr<fn(x: char, value: struct Struct~1 complete, y: char, other: struct Struct~1 complete, z: char) -> void>` @24
                  (print_struct~2 `fn(x: char, value: struct Struct~1 complete, y: char, other: struct Struct~1 complete, z: char) -> void` (static print_struct)))
               (truncate `char` @32 (123 `int` @36))
               (value~11 `struct Struct~1 complete` @0)
               (truncate `char` @40 (42 `int` @44))
               (v2~12 `struct Struct~1 complete` @11)
               (truncate `char` @48 (27 `int` @52)))))))

----- stderr -----
