panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__struct__abi__test_struct_passed_as_int_pair.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/struct/abi/test_struct_passed_as_int_pair.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/abi/test_struct_passed_as_int_pair.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (struct Struct~1
      (member string @0 `array<char; 11>`))
   (function-definition external stack-size=56
      (print_struct~2 `fn(value: struct Struct~1 complete) -> void` (static print_struct))
      (params
         (value~4 `struct Struct~1 complete` @0))
      (compound-statement
         (expression
            (call `int` @12
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 4>>` @24
                        (string `array<char; 4>` @void "%s\n\0"))))
               (noop-type-conversion `ptr<char>` @32
                  (addressof `ptr<array<char; 11>>` @32
                     (member `array<char; 11>` @0 string +0
                        (value~4 `struct Struct~1 complete` @0))))))))
   (function-definition external stack-size=40
      (main~5 `fn() -> int` (static main))
      (compound-statement
         (definition (value~7 `struct Struct~1 complete` @0)
            (braced
               (subobject +0 (string `array<char; 11>` @void "0123456789\0"))))
         (expression
            (call `void` @void
               (addressof `ptr<fn(value: struct Struct~1 complete) -> void>` @16
                  (print_struct~2 `fn(value: struct Struct~1 complete) -> void` (static print_struct)))
               (value~7 `struct Struct~1 complete` @0))))))

----- stderr -----
