panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__struct__abi__test_struct_passed_in_single_register.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/struct/abi/test_struct_passed_in_single_register.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/struct/abi/test_struct_passed_in_single_register.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (struct Struct~1
      (member x @0 `int`)
      (member y @4 `int`))
   (function-definition external stack-size=40
      (print_struct~2 `fn(value: struct Struct~1 complete) -> void` (static print_struct))
      (params
         (value~4 `struct Struct~1 complete` @0))
      (compound-statement
         (expression
            (call `int` @8
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @16
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; 7>>` @24
                        (string `array<char; 7>` @void "%d %d\n\0"))))
               (member `int` @0 x +0
                  (value~4 `struct Struct~1 complete` @0))
               (member `int` @4 y +4
                  (value~4 `struct Struct~1 complete` @0))))))
   (function-definition external stack-size=24
      (main~5 `fn() -> int` (static main))
      (compound-statement
         (struct Struct~1
            (member x @0 `int`)
            (member y @4 `int`))
         (definition (value~7 `struct Struct~1 complete` @0)
            (braced
               (subobject +0 (42 `int` @0))
               (subobject +4 (27 `int` @4))))
         (expression
            (call `void` @void
               (addressof `ptr<fn(value: struct Struct~1 complete) -> void>` @8
                  (print_struct~2 `fn(value: struct Struct~1 complete) -> void` (static print_struct)))
               (value~7 `struct Struct~1 complete` @0))))))

----- stderr -----
